--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
   "license": "MIT",
   "description": "",
   "dependencies": {
-    "express": "^4.21.1"
+    "cors": "^2.8.5",
+    "express": "^4.21.1",
+    "serialport": "^12.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.12.0",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/serialport": "^8.0.5",
     "@typescript-eslint/eslint-plugin": "^8.10.0",
     "@typescript-eslint/parser": "^8.10.0",
     "eslint": "^9.12.0",
